syntax = "proto3";
package dymensionxyz.dymension.rollapp;

import "gogoproto/gogo.proto";

option go_package = "github.com/dymensionxyz/dymension/x/rollapp/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  
  // dispute_period_in_blocks the number of blocks it takes
  // to change a status of a state from received to finalized.
  // during that period, any user could submit fraud proof
  uint64 dispute_period_in_blocks = 1
      [ (gogoproto.moretags) = "yaml:\"dispute_period_in_blocks\"" ];
}
